# adventofcode_2024

./: LICENSE  README.md  notes.md
day01/: day01.hs  input.txt
day02/: day02.cabal  day02.hs  input.txt
day03/: day03.cabal  day03.hs  input.txt
day04/: day04.cabal  day04.hs  input.txt
day05/: day05.cabal  day05.hs  input.txt
day06/: day06.cabal  day06.hs  input.txt
day07/: day07.cabal  day07.hs  input.txt
day08/: day08.cabal  day08.hs  input.txt
day09/: day09.hs  input.txt
day10/: day10.cabal  day10.hs  input.txt
day11/: day11.cabal  day11.hs  input.txt
day12/: day12.cabal  day12.hs  input.txt
day13/: day13.cabal  day13.hs  input.txt
day14/: day14.cabal  day14.hs  input.txt
day15/: day15.cabal  day15.hs  input.txt
day16/: day16.cabal  day16.hs  input.txt
day17/: day17.cabal  day17.hs  input.txt
day18/: day18.cabal  day18.hs  input.txt
day19/: day19.cabal  day19.hs  input.txt
day20/: day20.cabal  day20.hs  input.txt
day21/: day21.cabal  day21.hs  input.txt
day22/: day22.cabal  day22.hs  input.txt
day23/: day23.cabal  day23.hs  input.txt
day24/: day24.cabal  day24.hs  input.txt
day25/: day25.cabal  day25.hs  input.txt
