cabal-version:      3.6
name:               day14
version:            0.1.0.0

license:            MIT
license-file:       ../LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>

executable day14
    main-is: day14.hs

    build-depends:    base >= 4 && < 5,
                      containers,
                      regex-tdfa,
                      split

    hs-source-dirs:   .
    default-language: GHC2021
    ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N
