cabal-version:      3.6
name:               day19
version:            0.1.0.0

license:            MIT
license-file:       ../LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>


executable day19
    main-is: day19.hs

    build-depends:    base >= 4 && < 5,
                      bytestring >= 0.12.1.0,
                      containers,
                      regex-tdfa,
                      uglymemo

    hs-source-dirs:   .
    default-language: GHC2021
    ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N
